v.2/nginx-ingress/ingress-mgmt-agro4plus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mgmt-platform-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "300"   #"172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "300"   #"172800"
  namespace: epistola
spec:
  rules:
  - host: management.agro4plus.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a4p-mgmt-service
            port:
              number: 80
  - host: mng.agro4plus.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a4p-mgmt-service
            port:
              number: 80
  - host: management.agro4plus.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a4p-mgmt-service
            port:
              number: 80
  - host: mng.agro4plus.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a4p-mgmt-service
            port:
              number: 80
