v.2/nginx-ingress/ingress-spa-2-agro4plus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spa-platform-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  namespace: epistola
spec:
  rules:
  - host: spa.agro4plus.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a4p-spa-2-service
            port:
              number: 80
  - host: spa.agro4plus.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a4p-spa-2-service
            port:
              number: 80
